@@ -3,6 +3,8 @@ obsplus master:
     * Speed up wavebank.get_waveforms_bulk by time-filtering index before
       determining which files to read (see #93).
     * Update time is now set before reading files to update index (#95).
+    * add try/except in read index to alleviate test failures with concurrent
+      updates (see #101).
   - obsplus.conversions
     * Added a preserve_units flag to project and ensured forward compatibility
       with pyproj 2.x.x.
